--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# .gitignore file for project.
+# Author (s): Chris Johnson (chrisjohn404)
+# September 2020
+# License: GPLv2
 __pycache__
 build
 dist
